compiler/tests/success/arm-m4/global.jazz
u32 g = 42;

export
fn fourtytwo() -> reg u32 {
  reg u32 r;
  r = g;
  return r;
}

u8[4] t = { 1, 2, 3, 4 };

export
fn two () -> reg u32 {
  reg u32 r;
  r = (32u)t[1];
  return r;
}
